# raytracing

./: README.md
rust/: .gitignore  Cargo.toml
rust/examples/: benchmark_photon_map_balancing.rs  chapter-02.rs  chapter-05.rs  chapter-06.rs  chapter-07.rs  chapter-08.rs  chapter-09.rs  chapter-10.rs  chapter-11.rs  chapter-11a.rs  chapter-11b.rs  chapter-12.rs  chapter-13.rs  chapter-14.rs  chapter-15.rs  chapter-16.rs  chapter-2.rs  depth-of-field.rs  light-beam.rs  lights.rs  mandelbox.rs  photon-map-01.rs  photon-map-02.rs  photon-map.rs  soft_shadow.rs
rust/pictures/: chapter-02.ppm  chapter-05.ppm  chapter-06.ppm  chapter-10.ppm  chapter-14.ppm  chapter-15.ppm  chapter-2.ppm  depth-of-field.ppm  photon-map-01a.ppm  photon-map-01b.ppm  photon-map-01c.ppm  photon-map-02a.ppm  photon-map-02b.ppm  photon-map-02c.ppm
rust/src/: aabb.rs  approx_eq.rs  camera.rs  canvas.rs  canvas_life.rs  color.rs  cosine_distribution.rs  lib.rs  lights.rs  live_preview.rs  main.rs  materials.rs  math.rs  matrix.rs  obj_loader.rs  partial_sort.rs  pattern.rs  photon_map.rs  ray.rs  tuple.rs  world.rs
rust/src/shapes/: cone.rs  csg.rs  cube.rs  cylinder.rs  mandelbox.rs  mod.rs  planar_heightmap.rs  plane.rs  sphere.rs  triangle.rs
scheme/: .gitignore  chapter02.ppm  chapter02.scm  chapter05.ppm  chapter05.scm  chapter06.ppm  chapter06.scm  chapter07.ppm  chapter07.scm  chapter08.ppm  chapter08.scm  chapter09.ppm  chapter09.scm  chapter10.ppm  chapter10.scm  chapter11.ppm  chapter11.scm  chapter11a.ppm  chapter11a.scm  chapter11b.ppm  chapter11b.scm  chapter13.ppm  chapter13.scm  (+2 more)
(+30 files in other folders)
