[package]
name = "raytracing"
version = "0.1.0"
authors = ["Martin Billinger <mbillingr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.7"
rand_distr = "0.2"
sdl2 = "0.33"
quaternion = "0.4"
vecmath = "1.0"
rayon = "1.3"
